# dimap_geocode

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  data_exploring.ipynb  docker-compose.yml  entrypoint.sh  pyproject.toml
.agents/: AGENTS.md
SPECS/design/: wireframes.html
SPECS/geocodificacao/: 001-logradouro-geocod-linha.md  002-lote-geocod-poligono.md
SPECS/infraestrutura/: 001-middleware-validacao-pydantic.md  002-template-base.md
SPECS/ingestao_dados/: 001-wfs-fetcher.md  002-wms-fetcher.md  003-extract-logradouros-names.md  004-extract-segmentos-logradouros.md  005-extract-enderecos-lotes.md
SPECS/mapa/: 001-infra-mapa-e-logradouro-linha.md  002-lote-poligono-no-mapa.md
SPECS/match_logradouros/: 001-text-cleaner.md  002-logradouro-augmenter.md  003-fuzzy-match.md  004-logradouro-matcher.md  005-literal-matcher.md  006-selecao-com-digito-verificador.md
SPECS/roteamento_busca/: 001-roteador-entrada.md  002-filtro-contribuinte.md  003-filtro-codlog.md  004-view-busca-codlog.md  005-view-roteador-busca.md  006-secao-contribuinte.md  007-secao-logradouro-nome.md  008-selecao-sugestao-clicavel.md  009-endereco-com-numero.md
apps/address_geocoder/: apps.py  schemas.py  urls.py  views.py
apps/core/: middleware.py  urls.py  views.py
config/: settings.py  urls.py
data/: nomes_logradouros.parquet  segmentos_logradouros.parquet  tipos_logradouro_aumentado.json  tipos_logradouro_cache.parquet  traducao_codigos_tipos_logradouro.json
templates/: base.html
wireframes/: DIMAP-GeoCoder-Wireframe.html  README.md  wireframe_mobile.html
(+145 files in other folders)
