[project]
name = "dimap-geocode"
version = "0.1.0"
description = "Aplicativo web de geocodificação sobre dados oficiais de logradouros, lotes fiscais e endereços da Prefeitura de São Paulo (PMSP)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-ninja>=1.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0",
    "requests>=2.34.2",
]
