[project]
name = "dimap-geocode"
version = "0.1.0"
description = "Aplicativo web de geocodificação sobre dados oficiais de logradouros, lotes fiscais e endereços da Prefeitura de São Paulo (PMSP)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-ninja>=1.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "pyarrow>=19.0",
    "pandas>=3.0.3",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "django-stubs>=6.0.5",
    "pandas-stubs>=2.2",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
